--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
 
 <!-- 1 -->
 <div class="mySlides fade" >
-    <script type="text/javascript" src="aos.js"></script>
     <img class="particle centersolute loop-alternate-infinity" src="img/particle.png">
     <img class="particle2 centersolute loop-alternate-infinity" src="img/particle2.png">
   	<p class="title white">Millenials</p>
@@ -51,12 +50,13 @@
 </div>
 
 <!-- 2 -->
-  <div class="mySlides fade">
-      <img class="particle loop-alternate-infinity" src="img/particle.png">
-  	<p class="title titlefont white">Millenials</p>
-  	<img src="img/man2.png" class="centersolute" style="width: 11%; margin-top: 8rem;">
-  
-  </div>
+<div class="mySlides fade" >
+  <img class="particle centersolute loop-alternate-infinity" src="img/particle.png">
+  <img class="particle2 centersolute loop-alternate-infinity" src="img/particle2.png">
+  <p class="title white">Millenials</p>
+  <img src="img/man2.png" class="centersolute hm" style="width: 11%; margin-top: 8.3rem; margin:right
+  30px;">
+</div>
 
   <!-- Next and previous buttons -->
   <a class="prev" id="prevSlide" onclick="plusSlides(-1)"><img src="img/leftarrow.png"></a>
@@ -68,14 +68,14 @@
   <style type="text/css">
     .st0{fill:url(#SVGID_1_);}
   </style>
-  <linearGradient  class="gradi"id="SVGID_1_" gradientUnits="userSpaceOnUse" x1="1474.2449" y1="767.6348" x2="-101.7551" y2="-26.3652">
+  <linearGradient  class="gradi" id="SVGID_1_" gradientUnits="userSpaceOnUse" x1="1474.2449" y1="767.6348" x2="-101.7551" y2="-26.3652">
     <stop  offset="0" style="stop-color:#00A5F4"/>
     <stop  offset="0.1793" style="stop-color:#009EEB"/>
     <stop  offset="0.4772" style="stop-color:#0089D1"/>
     <stop  offset="0.8548" style="stop-color:#0069A8"/>
     <stop  offset="0.9944" style="stop-color:#005B97"/>
   </linearGradient>
-  <linearGradient  class="gradi"id="GRADI2" gradientUnits="userSpaceOnUse" x1="1474.2449" y1="767.6348" x2="-101.7551" y2="-26.3652">
+  <linearGradient  class="gradi" id="GRADI2" gradientUnits="userSpaceOnUse" x1="1474.2449" y1="767.6348" x2="-101.7551" y2="-26.3652">
       <stop  offset="0" style="stop-color:rgb(238, 11, 144)"/>
       <stop  offset="0.1793" style="stop-color:rgb(235, 0, 118)"/>
       <stop  offset="0.4772" style="stop-color:rgb(209, 0, 87)"/>
@@ -143,7 +143,7 @@
 <section id="profile" style="height: 100vh">
     <div class="profile">
         <h1 class="primaryfont" data-aos="fade-down" data-aos-offset="100" data-aos-duration="500" >Pendapat Ahli</h1>
-          <div class="kolom12" id="carousel" data-aos="fade-up" data-aos-duration="500">
+          <div class="kolom12" id="carousel" data-aos="fade-center" data-aos-duration="500">
             <img src="img/rei1.jpg" data-number="1" data-title="Emily Miethner" data-org="Millennial Expert" data-number=1 data-content="Saya enggak mau bilang kalau baby boomers suka ngajuin pertanyaan-pertanyaan bodoh. Saya cuma mau mastiin mereka tidak menganggap milenial bukan anak-anak manja yang selalu minta diistimewakan." id="item-1" class="round "/>
             <img src="img/rei2.jpg" data-number="2" data-title="Mark Zuckenberg" data-org="CEO Facebook" data-number=2 data-content="Kita hidup di masa yang tidak stabil, dimana orang-orang yang ditinggalkan oleh globalisasi di seluruh dunia sulit untuk peduli dengan orang-orang di luar sana ketika kita belum merasa nyaman dengan kehidupan kita di rumah. Ada tekanan untuk berubah." id="item-2" class="round" />
             <img src="img/rei3.jpg" data-number="3" data-title="Rudiantara" data-org="Menteri Komunikasi dan Informatika" data-number=3 data-content="Ini kesempatan milenial untuk berkontribusi dalam berbagi untuk sesama. Ini juga menjadi tantangan bagi mereka. Kita lihat nanti hasilnya. Kalau ini pas dan diviralkan, saya yakin program ini akan menjadi kesuksesan yang luar biasa untuk Indonesia" id="item-3" class="round" />
@@ -165,7 +165,7 @@
     <div class="kolom">
         <span class="fas fa-camera"></span>
       <div class="kolom8">
-        <div class="primaryfont againts title2" data-aos="fade-down-right" data-aos-offset="200" data-aos-duration="500">
+        <div id="revolution" class="primaryfont againts title2" data-aos="fade-down-right" data-aos-offset="200" data-aos-duration="500">
             <p>MILLENIALS</p>
             <p>AGAINTS INDUSTRIAL</p>
             <p>REVOLUTION 4.0</p>
