--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 
 <div class="kolom73">
   <div class="primaryfont againts2" style="color: white; font-size: 46pt;">
-    <p class="m-0" data-aos="fade-down-left" data-aos-duration="500" data-aos-offset="00">SIAPKAN</p>
+    <p class="m-0" data-aos="fade-down-left" data-aos-duration="500" data-aos-offset="200">SIAPKAN</p>
     <p class="m-0" data-aos="fade-right" data-aos-duration="500" data-aos-offset="300">DIRIMU</p>
     <p class="secondaryfont" data-aos="fade-left" data-aos-duration="400" data-aos-offset="300" style="font-size: 20px; font-weight: 200; margin-right: 7rem; padding-top:20px">Kemampuan berbahasa asing, berpikir kritis, kreativitas, people management dan emotional intelligence. Hal-hal tersebut merupakan beberapa kompetensi yang diperlukan di era revolusi industri 4.0. Sudah siapkah kamu sebagai generasi millenial untuk menghadapi era revolusi industri yang keempat ini?</p>
     <p class="title3 normalfont" data-aos="fade-right" data-aos-duration="500" data-aos-offset="200" style="font-size: 28pt;">Rekomendasi Pekerjaan untuk Kaum Millenial</p>
@@ -240,8 +240,8 @@
               <div class="vl " style="position: absolute;"></div>
                   
               <div class="title3">
-          <p class="normalfont m-0" style="margin-left: 140px; margin-top: 60px; font-weight: 600;">Bisnis</p>
-          <p class="normalfont m-0" style="margin-left: 140px; color: #ff6d00; font-weight: 600;">Online</p>
+          <p class="normalfont m-0" style="margin-left: 140px; margin-top: 60px; font-weight: 600;">Online</p>
+          <p class="normalfont m-0" style="margin-left: 140px; color: #ff6d00; font-weight: 600;">Business</p>
           </div>
           <p class="normalfont m-0"style="margin-top:75px; margin-left: 160px; font-size: 16pt; font-weight:700;" >Tools</p>
           <span style="height: 35px; width: 35px;background-color: #1e88e5b2; border-radius: 50% ;display: inline-block; margin-left: 160px; margin-top: 15px;"></span>
@@ -360,7 +360,7 @@
                 <div class="vl2" style="position: absolute;"></div>  
               <div class="title3">
           <p class="normalfont m-0" style="margin-left: 140px; margin-top: 60px; font-weight: 600;">Graphic</p>
-          <p class="normalfont m-0" style="margin-left: 140px; color: #002171; font-weight: 600;">Designer</p>
+          <p class="normalfont m-0" style="margin-left: 140px; color: #A36E50; font-weight: 600;">Designer</p>
           </div>
           <p class="normalfont m-0"style="margin-top:75px; margin-left: 160px; font-size: 16pt; font-weight:700;" >Tools</p>
           <span style="height: 35px; width: 35px;background-color: #01579b; border-radius: 50% ;display: inline-block; margin-left: 160px; margin-top: 15px;"></span>
@@ -417,7 +417,7 @@
                 <div class="vl2" style="position: absolute;"></div>  
               <div class="title3">
           <p class="normalfont m-0" style="margin-left: 140px; margin-top: 60px; font-weight: 600;">Software</p>
-          <p class="normalfont m-0" style="margin-left: 140px; color: #8d6e63;  font-weight: 600;">Engineer</p>
+          <p class="normalfont m-0" style="margin-left: 140px; color: #5A9354;  font-weight: 600;">Engineer</p>
           </div>
           <p class="normalfont m-0"style="margin-top:75px; margin-left: 160px; font-size: 16pt; font-weight:700;" >Tools</p>
           <span style="height: 35px; width: 35px;background-color: #ff9100; border-radius: 50% ;display: inline-block; margin-left: 160px; margin-top: 15px;"></span>
@@ -450,7 +450,7 @@
           <p class="normal titlecircle last2">Education</p>
         </div>
         <p class="primaryfont m-0" style="font-size: 34px; margin-top: 95px; margin-left: 245px;">Prospek</p>
-        <hr style="border: 3px solid#01579b; border-radius: 5px; width: 3.5rem;float: right; margin-right: 85px;">
+        <hr style="border: 3px solid#ff9100; border-radius: 5px; width: 3.5rem;float: right; margin-right: 85px;">
         <div style="width: 200px; text-align: right; margin-left: 165px; margin-top: 25px; ">
         <p class="normalfont" style="font-size: 17px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec 
           aliquam nisi orci, ac gravida lectus imperdiet in. Nulla quis eros v
@@ -473,7 +473,7 @@
                 <div class="vl2" style="position: absolute;"></div>  
               <div class="title3">
           <p class="normalfont m-0" style="margin-left: 140px; margin-top: 60px; font-weight: 600;">Esport</p>
-          <p class="normalfont m-0" style="margin-left: 140px; color: #26c6da;  font-weight: 600;">Player</p>
+          <p class="normalfont m-0" style="margin-left: 140px; color: #FF2962;  font-weight: 600;">Player</p>
           </div>
           <p class="normalfont m-0"style="margin-top:75px; margin-left: 160px; font-size: 16pt; font-weight:700;" >Tools</p>
           <span style="height: 35px; width: 35px;background-color: #313357; border-radius: 50% ;display: inline-block; margin-left: 160px; margin-top: 15px;"></span>
