--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         <h1 class="primaryfont" data-aos="fade-down" data-aos-offset="100" data-aos-duration="500">Pendapat Ahli</h1>
           <div class="kolom12 centersolute" id="carousel" data-aos="zoom-in" data-aos-duration="500">
             <img src="img/rei1.jpg" data-number="1" data-title="Emily Miethner" data-org="Millennial Expert" data-number=1 data-content="Saya enggak mau bilang kalau baby boomers suka ngajuin pertanyaan-pertanyaan bodoh. Saya cuma mau mastiin mereka tidak menganggap milenial bukan anak-anak manja yang selalu minta diistimewakan." id="item-1" class="round "/>
-            <img src="img/rei2.jpg" data-number="2" data-title="Mark Zuckenberg" data-org="CEO Facebook" data-number=2 data-content="Kita hidup di masa yang tidak stabil, dimana orang-orang yang ditinggalkan oleh globalisasi di seluruh dunia sulit untuk peduli dengan orang-orang di luar sana ketika kita belum merasa nyaman dengan kehidupan kita di rumah. Ada tekanan untuk berubah." id="item-2" class="round" />
+            <img src="img/rei2.jpg" data-number="2" data-title="Mark Zuckerberg" data-org="CEO Facebook" data-number=2 data-content="Kita hidup di masa yang tidak stabil, dimana orang-orang yang ditinggalkan oleh globalisasi di seluruh dunia sulit untuk peduli dengan orang-orang di luar sana ketika kita belum merasa nyaman dengan kehidupan kita di rumah. Ada tekanan untuk berubah." id="item-2" class="round" />
             <img src="img/rei3.jpg" data-number="3" data-title="Rudiantara" data-org="Menteri Komunikasi dan Informatika" data-number=3 data-content="Ini kesempatan milenial untuk berkontribusi dalam berbagi untuk sesama. Ini juga menjadi tantangan bagi mereka. Kita lihat nanti hasilnya. Kalau ini pas dan diviralkan, saya yakin program ini akan menjadi kesuksesan yang luar biasa untuk Indonesia" id="item-3" class="round" />
           </div>
       <div id="indicator" data-aos="fade-up" data-aos-offset="200" data-aos-duration="500" >
@@ -164,7 +164,6 @@
 <section >
   <img src="img/Asset 13.png" data-aos="zoom-in-left" data-aos-offset="400" data-aos-duration="500"  style="width: 75%; position: absolute; z-index: -10; right:-20%; margin-top: -15rem">
     <div class="kolom">
-        <span class="fas fa-camera"></span>
       <div class="kolom8">
         <div id="revolution" class="primaryfont againts title2" data-aos="fade-down-right" data-aos-offset="200" data-aos-duration="500">
             <p>MILLENIALS</p>
@@ -186,7 +185,7 @@
       </div>
           <img src="img/robot.png" data-aos="fade-up-left" data-aos-offset="300" data-aos-duration="500"  style="width: 54%; right: -3%; padding-top: 8rem;position: absolute; z-index: -5;"> 
       
-          <img class="orang" data-aos="zoom-in-up" data-aos-offset="100" data-aos-duration="500" src="img/man1b.png" style="width: 29%;position: absolute; margin-top: 77rem; margin-left: 3.4rem; z-index: 6;">
+          <img class="orang" src="img/man1b.png" style="width: 29%;position: absolute; margin-top: 77rem; margin-left: 3.4rem; z-index: 6;">
           <a href="#ex1" rel="modal:open" class="video"><img src="img/hiclipart.com-id_mutwh.png"></a>
 
         </div>
