--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <script type="text/javascript" src="anime.min.js"></script>
   <script type="text/javascript" src="core.js"></script>
   <script type="text/javascript" src="aos.js"></script>
+  <script type="text/javascript" src="main.js"></script>
   <!-- Icon -->
   <link rel="shortcut icon" href="img/robot.png">
 </head>
@@ -546,14 +547,5 @@
 <div class="secondaryfont" style="position: absolute; font-size:20px; margin-top:7rem; margin-left: 3.5rem;">@Hiedescom 2019</div>
 <img class="foot" src="img/bg_footer.png">
 </section>
-
-<!-- Main javascript -->
-<script src="main.js"></script>
-<script>  
-
-    //image bergerak
-  
-    
-  </script>
 </body>
 </html>
