--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
   <script type="text/javascript" src="anime.min.js"></script>
   <script type="text/javascript" src="core.js"></script>
   <script type="text/javascript" src="aos.js"></script>
-  <script type="text/javascript" src="main.js"></script>
   <!-- Icon -->
   <link rel="shortcut icon" href="img/robot.png">
 </head>
@@ -548,4 +547,5 @@
 <img class="foot" src="img/bg_footer.png">
 </section>
 </body>
+<script src="main.js"></script>
 </html>
