--- a/index.html
+++ b/index.html
@@ -201,30 +201,20 @@
   </div>
 
  <!-- end -->
-</section>    
-<section id="againts"style="background-color: black; z-index:5; overflow-y: hidden; overflow-x: hidden;">
-<div class="kolom">
-
-<div class="kolom73">
-  <div class="primaryfont againts2" style="color: white; font-size: 46pt;">
-    <p class="m-0" data-aos="fade-down-left" data-aos-duration="500" data-aos-offset="200">SIAPKAN</p>
-    <p class="m-0" data-aos="fade-right" data-aos-duration="500" data-aos-offset="300">DIRIMU</p>
-    <p class="secondaryfont" data-aos="fade-left" data-aos-duration="400" data-aos-offset="300" style="font-size: 20px; font-weight: 200; margin-right: 7rem; padding-top:20px">Kemampuan berbahasa asing, berpikir kritis, kreativitas, people management dan emotional intelligence. Hal-hal tersebut merupakan beberapa kompetensi yang diperlukan di era revolusi industri 4.0. Sudah siapkah kamu sebagai generasi millenial untuk menghadapi era revolusi industri yang keempat ini?</p>
-    <p class="title3 normalfont" data-aos="fade-right" data-aos-duration="500" data-aos-offset="200" style="font-size: 28pt;">Rekomendasi Pekerjaan untuk Kaum Millenial</p>
-    <a href="#jobs"><img data-aos="fade-down" data-aos-duration="500" data-aos-offset="200" src="img/downarrow2.png" class="arrow"></a>
-  </div>  
-</div>
   </section>
   <section id="againts"style="background-color: black; z-index:5; overflow-y: hidden; overflow-x: hidden;">
+      <div class="particle4" data-aos="fade-down-right" data-aos-offset="400" data-aos-duration="500">
+          <img src="img/particle_biru.png">
+        </div>
       <div class="kolom">
-      
       <div class="kolom73">
+        
         <div class="primaryfont againts2" style="color: white; font-size: 46pt;">
           <p class="m-0" data-aos="fade-down-left" data-aos-duration="500" data-aos-offset="200">SIAPKAN</p>
           <p class="m-0" data-aos="fade-right" data-aos-duration="500" data-aos-offset="300">DIRIMU</p>
           <p class="secondaryfont" data-aos="fade-left" data-aos-duration="400" data-aos-offset="300" style="font-size: 20px; font-weight: 200; margin-right: 7rem; padding-top:20px">Kemampuan berbahasa asing, berpikir kritis, kreativitas, people management dan emotional intelligence. Hal-hal tersebut merupakan beberapa kompetensi yang diperlukan di era revolusi industri 4.0. Sudah siapkah kamu sebagai generasi millenial untuk menghadapi era revolusi industri yang keempat ini?</p>
-          <p class="title3 normalfont" data-aos="fade-right" data-aos-duration="500" data-aos-offset="200" style="font-size: 28pt;">Rekomendasi Pekerjaan untuk Kaum Millenial</p>
-          <a href="#jobs"><img data-aos="fade-down" data-aos-duration="500" data-aos-offset="200" src="img/downarrow2.png" class="arrow"></a>
+          <p class="title3 normalfont" data-aos="fade-right" data-aos-duration="500" data-aos-offset="200" style="font-size: 30pt;">Rekomendasi Pekerjaan untuk Kaum Millenial</p>
+          <a href="#jobs"><img data-aos="fade-down" data-aos-duration="500" src="img/downarrow2.png" class="arrow"></a>
         </div>  
       </div>
         </section>
