--- a/index.html
+++ b/index.html
@@ -27,17 +27,16 @@
 <section id="landing">
     <!-- Social bar -->
     <div class="icon-bar" data-aos="fade-right" data-aos-offset="2000" data-aos-duration="500">
-        <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-        <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-        <a href="#" class="google"><i class="fa fa-google"></i></a>
-        <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
-        <a href="#" class="youtube"><i class="fa fa-youtube"></i></a>
+        <a href="https://www.facebook.com/sharer/sharer.php?u=https://shaddamah.github.io/WebHiedescom/" target="_blank" class="facebook"><i class="fa fa-facebook"></i></a>
+        <a href="https://twitter.com/intent/tweet?text=Kunjungi Website Millenyal!https://shaddamah.github.io/WebHiedescom/" target="_blank" class="twitter"><i class="fa fa-twitter"></i></a>
+        <a href="https://web.whatsapp.com/send?text=https://shaddamah.github.io/WebHiedescom/" target="_blank" class="google"><i class="fa fa-whatsapp"></i></a>
+        <a href="http://www.linkedin.com/shareArticle?mini=true&url=https://shaddamah.github.io/WebHiedescom/" target="_blank" class="linkedin"><i class="fa fa-linkedin"></i></a>
+        <a href="mailto:?subject=Kunjungi Website Millenyal!&amp;body=https://shaddamah.github.io/WebHiedescom/" target="_blank" class="youtube"><i class="fa fa-envelope"></i></a>
       </div>
 
     <!-- top -->
     <span data-aos="fade-up" data-aos-offset="500" data-aos-duration="500" onclick="topFunction()" id="myBtn" class="hoveric white fa fa-arrow-up fa-1x"></span>
 
-	<div class="slideshow-container">
 <nav data-aos="fade-down" data-aos-offset="300" data-aos-duration="500">
 <div class="navbar" style="left:0; margin-left:60px;">
   <a href="" class="primaryfont white badge">Millenyal.</a>
@@ -51,43 +50,42 @@
     </nav>
 
 <!-- 1 -->
-<div class="slideshow-container">
 <img class="particle centersolute loop-alternate-infinity" src="img/particle.png">
 <img class="particle2 centersolute loop-alternate-infinity" src="img/particle2.png">
 
-<div class="mySlides fade" >
+<div class="slideshow-container">
+  <div class="mySlides fade" >
   	<p class="title white">Millenials</p>
   	<img src="img/man.png" class="centersolute hm" style="width: 15%; margin-top: 8.3rem;">
 </div>
 
 <!-- 2 -->
 <div class="mySlides fade" >
-  <p class="title white">Millenials</p>
+  <div class="tile">
+  <p class="title5 white">Baby</p>
+  <p class="title6 white">Boomers</p>
+</div>
   <img src="img/man2.png" class="centersolute hm" style="width: 11%; margin-top: 8.3rem; margin:right
   30px;">
 </div>
 
   <!-- Next and previous buttons -->
-  <a class="prev" id="prevSlide" onclick="plusSlides(-1)"><img src="img/leftarrow.png"></a>
-  <a class="next" id="nextSlide" onclick="plusSlides(1)"><img src="img/rightarrow.png"></a>
-	</div>
+  <div onclick="currentSlide(2)"><a class="prev" id="prevSlide"><img src="img/leftarrow.png"></a></div>
+  <div onclick="currentSlide(1)"><a class="next" id="nextSlide"><img src="img/rightarrow.png"></a></div>
   <!-- SVG -->
   <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-     viewBox="0 0 1366 878" style="enable-background:new 0 0 1366 768;" xml:space="preserve">
+     viewBox="0 0 1366 878" style="enable-background:new 0 0 1366 878;" xml:space="preserve">
   <path class="st0 pertama" d="M1366,713c0,0-90.2-110-386.6-110C801.8,603,469,723,212.6,791.6C61.7,832.1,0,821,0,821V0h1366V713z"/>
   </svg>
 </div>
 <br>
 
 <!-- CONTENT -->
-
   <div class="slider" data-aos="fade-left" data-aos-offset="500" data-aos-duration="500">
     <a class="dot active" id="slideContent1"></a>
     <a class="dot" id="slideContent2"></a>
     <a class="dot" id="slideContent3"></a>
   </div>
-
-
 </section>
 <section id="about">
 
